# dix

./: .gitignore  LICENSE  README.md  alias.go  db.go  go.mod  go.sum  pay.go  pool.go  sol.go  types.go  wallet.go
cmd/dix/: main.go
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
