[package]
name = "dix-registry"
version = "0.1.0"
description = "Solana username registry for DIX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dix_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
